host/crates/tui/tests/snapshots/snapshots__detail_404.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, |t| t.status() == Some(404), \"l\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active           26 requests · 13 KB in · 18 KB out
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.1 KB/s   ━ Sending 1.3 KB/s ─╮
│  16 KB/s                                                                             ┊                                                   │
│                                                                                      ┊                                                   │
│                                                                                      ┊            ┏━┓                                    │
│                                                                                      ┊            ┃ ┃                                    │
│ 8.0 KB/s                                                                             ┊            ┃ ┃                ┏━┓                 │
│                                                                                      ┊            ┃ ┗━┓  ┏┓      ┏━┓ ┃ ┃          ┏━┓    │
│                                                                                      ┊      ┏━┓━┓ ┃   ┗━┓┛┗━━┏━┓━┛ ┗━┓ ┏━━━━━━┓━━┓┃ ┃    │
│                                                                                      ━━┏━━━━┛ ┗━┗━┛ ┏━┛ ┗┓┏━━┛ ┗━━━┛ ┗━┛┓┏━━┓┏┗━━┗┛ ┗━┓━ │
│        0                                                                             ━━┛        ┗━━━┛    ┗┛             ┗┛  ┗┛    ┗━┛ ┗━ │
│                                                                                      00:00.000            00:05.000            00:10.000 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ───────────────────────────────╮ ╭─ liveness-model-v3.json ─ Response body ─ Request body ────╮
│ Name                  Size  Type      Status         Time   Timeline      │ │ {                                                          │
│ token                391 B  json      200          513 ms           █    ▐│ │   "ok": false,                                             │
│ init                 316 B  json      200          2.01 s           █▎   ▐│ │   "error": {                                               │
│ monitor              302 B  json      200          1.58 s           ▐▏   ▐│ │     "code": "NOT_FOUND",                                   │
│ events                17 B  json      200          1.45 s           █▍   ▐│ │     "message": "asset 'liveness-model-v3.json' does not    │
│ u_4821.png          4.5 KB  png       200          476 ms            ▏   ▐│ │       exist",                                              │
│ monitor              302 B  json      200          1.53 s            ▐   ▐│ │     "requestId": "98eec17a-0161-4863-aa72-4f7e54f1f9e6"    │
│ challenge            144 B  json      200          386 ms            ▏   ▐│ │   }                                                        │
│ config                 0 B            302           61 ms            ▏   ▐│ ╰────────────────────────────────────────────────────────────╯
│ ↪ config.json        106 B  json      200          195 ms            ▏   ▐│ ╭─ Overview ─ Response ─ Request ─ Call Stack ───────────────╮
│ attest               180 B  json      200          2.75 s            ▐▉  ▐│ │ HTTP/2 404 Not Found                                       │
│ metrics                6 B  protobuf  200          224 ms             ▏  ▐│ │                                                            │
│ monitor              302 B  json      200          1.41 s             ▌  ▐│ │ Headers (6)                                                │
│ events                17 B  json      200          1.14 s             ▌  ▐│ │ date: Tue, 29 Sep 2026 05:10:06 GMT                        │
│ liveness-model-…     150 B  json      404          346 ms             ▏  ▐│ │ content-type: application/json; charset=utf-8              │
│ enroll                72 B  json      200          2.08 s              ▉ ▐│ │ content-length: 150                                        │
│ documents             93 B  json      200          515 ms              █ ▐│ │ cache-control: no-cache, no-store                          │
│ monitor              302 B  json      200          1.50 s              ▊ ▐│ │ x-request-id: 0878d2b6-34d7-4252-ac23-14640e140250         │
│ report               305 B  html      500          219 ms              ▏ ▐│ │ server: envoy                                              │
│ lookup?fields=c…     101 B  json      200          507 ms              ▕ ▐│ │                                                            │
│ monitor              302 B  json      200          1.49 s              ▕▌▐│ │ Body  JSON, 150 B  [parsed · p: source]                    │
│ status?sessionI…     263 B  json      200          326 ms               ▏ │ │ {                                                          │
│ threshold                             ···          1.90 s               █ │ │   "ok": false,                                             │
│ events                17 B  json      200          970 ms               ▏ │ │   "error": {                                               │
╰───────────────────────────────────────────────────────────────────────────╯ ╰────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
