host/crates/tui/tests/snapshots/snapshots__detail_call_stack_expanded.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, init(), \"lll<Down><Down><Down><Enter>\")"
---
 traffic-police  Pixel 8 [demo]  com.example.shop  pid 4312  ● LIVE  ✎ 1 rule active          26 requests · 14 KB in · 18 KB out · 1 failed
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.9 KB/s   ━ Sending 2.4 KB/s ─╮
│  12 KB/s                                                                                  ┊                                              │
│                                                                                           ┊           ▃▇▇▅▁                              │
│ 6.0 KB/s                                                                                  ┊         ▁▅█████▆▆▆▆▄▁         ▁▁▁▂▂▄▄▃▂▂▂▃▃▂ │
│                                                                                           ▃▄▅▆▇████▇█████████████▇▆▅▅▅▅▆▇███████████████ │
│        0 ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┊┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ │
│                                                                                           🮂▀🮄🮆██████🮆🮅🮅🮅🮆████🮆🮅🮅🮆███🮆🮅🮄🮆██████████████🮆🮄 │
│ 4.0 KB/s                                                                                  ┊    ▔▔▔▔      ▔🮃🮃▔    ▔🮂▔    ▀████🮆🮂  🮂🮃▀▀🮂   │
│                                                                                           ┊                              ▀██🮄            │
│ 8.0 KB/s                                                                                  ┊                               ▔▔             │
│                                                                                           00:00.000            00:05.000                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ─ Logdawg ─────────────────────╮ ╭─ sessions ─ Response body ─ Request body ──────────────────╮
│ Name                  Size  Type      Status         Time   Timeline      │ │ {                                                          │
│ token                364 B  json      200          513 ms           ▎    ▐│ │   "ok": true,                                              │
│ sessions             290 B  json      200          2.11 s           🮉▎   ▐│ │   "sessionId": "session_15bce3a5a963c9fde0ebe700e9d76981", │
│ notifications        306 B  json      200          1.77 s           ▐▎   ▐│ │   "userId": "user_1024",                                   │
│ events                17 B  json      200          1.38 s           🮇▍   ▐│ │   "config": {                                              │
│ user_1024.png       4.9 KB  png       200          494 ms            ▎   ▐│ │     "pollIntervalMs": 1500,                                │
│ notifications        306 B  json      200          1.33 s            🮉   ▐│ │     "maxPolls": 20,                                        │
│ products?catego…    1.0 KB  json      200          431 ms            ▏   ▐│ │     "features": {                                          │
│ config                 0 B            302           61 ms            ▕   ▐│ ╰────────────────────────────────────────────────────────────╯
│ ↪ config.json        103 B  json      200          315 ms            ▕   ▐│ ╭─ Overview ─ Response ─ Request ─ Call Stack ─ Logs ────────╮
│ items                149 B  json      200          2.79 s            🮇█  ▐│ │ Thread  DefaultDispatcher-worker-2  (id 59, tid 4371)      │
│ metrics                6 B  protobuf  200          338 ms             ▏  ▐│ │ captured when the app called execute() or enqueue(): the   │
│ notifications        306 B  json      200          1.65 s             ▊  ▐│ │   real call site                                           │
│ events                17 B  json      200          1.09 s             ▌  ▐│ │                                                            │
│ promo-banner-v3…     148 B  json      404          277 ms             ▕  ▐│ │   ▾ 9 framework frames (okhttp3, retrofit2, java, $Proxy)  │
│ reviews               86 B  json      200          516 ms              ▎ ▐│ │     at okhttp3.internal.connection.RealCall.callStart      │
│ notifications        306 B  json      200          1.72 s              ▊ ▐│ │       (RealCall.kt:171)                                    │
│ checkout              99 B  json      200          2.33 s              █ ▐│ │     at okhttp3.internal.connection.RealCall.enqueue        │
│ cancel               305 B  html      500          222 ms              ▕ ▐│ │       (RealCall.kt:163)                                    │
│ lookup?fields=c…     120 B  json      200          291 ms              ▕ ▐│ │     at retrofit2.OkHttpCall.enqueue(OkHttpCall.java:193)   │
│ notifications        306 B  json      200          1.42 s              ▕▌▐│ │     at retrofit2.KotlinExtensions.await(KotlinExtensions.  │
│ events                17 B  json      200          958 ms               ▍ │ │       kt:37)                                               │
│ status?orderId=…     146 B  json      200          329 ms               ▏ │ │     at retrofit2.HttpServiceMethod$SuspendForBody.adapt    │
│ recommendations…                      ···          1.90 s               🮋 │ │       (HttpServiceMethod.java:243)                         │
╰───────────────────────────────────────────────────────────────────────────╯ ╰────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
