host/crates/tui/tests/snapshots/snapshots__detail_canceled.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, path_ends(\"fonts.json\"), \"\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active           26 requests · 13 KB in · 18 KB out
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.1 KB/s   ━ Sending 1.3 KB/s ─╮
│  16 KB/s                                                                             ┊                                                   │
│                                                                                      ┊                                                   │
│                                                                                      ┊            ┏━┓                                    │
│                                                                                      ┊            ┃ ┃                                    │
│ 8.0 KB/s                                                                             ┊            ┃ ┃                ┏━┓                 │
│                                                                                      ┊            ┃ ┗━┓  ┏┓      ┏━┓ ┃ ┃          ┏━┓    │
│                                                                                      ┊      ┏━┓━┓ ┃   ┗━┓┛┗━━┏━┓━┛ ┗━┓ ┏━━━━━━┓━━┓┃ ┃    │
│                                                                                      ━━┏━━━━┛ ┗━┗━┛ ┏━┛ ┗┓┏━━┛ ┗━━━┛ ┗━┛┓┏━━┓┏┗━━┗┛ ┗━┓━ │
│        0                                                                             ━━┛        ┗━━━┛    ┗┛             ┗┛  ┗┛    ┗━┛ ┗━ │
│                                                                                      00:00.000            00:05.000            00:10.000 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ───────────────────────────────╮╭─ fonts.json ─ Response body ─ Request body ───────────── ✕ ─╮
│ Name                    Size Type      Status         Time Timeline       ││ no response · IOException: Canceled                         │
│ monitor                302 B json      200          1.58 s          █     ││                                                             │
│ events                  17 B json      200          1.45 s          █▏   ▐││                                                             │
│ u_4821.png            4.5 KB png       200          476 ms          █    ▐││                                                             │
│ monitor                302 B json      200          1.53 s           ▊   ▐││                                                             │
│ challenge              144 B json      200          386 ms           ▏   ▐││                                                             │
│ config                   0 B           302           61 ms           ▏   ▐││                                                             │
│ ↪ config.json          106 B json      200          195 ms           ▏   ▐││                                                             │
│ attest                 180 B json      200          2.75 s           ▐█  ▐│╰─────────────────────────────────────────────────────────────╯
│ metrics                  6 B protobuf  200          224 ms           ▕   ▐│╭─ Overview ─ Response ─ Request ─ Call Stack ────────────────╮
│ monitor                302 B json      200          1.41 s            ▋  ▐││ Request           fonts.json                                │
│ events                  17 B json      200          1.14 s            ▌  ▐││ Method            GET                                       │
│ liveness-model-v3…     150 B json      404          346 ms            ▏  ▐││ Status            IOException: Canceled                     │
│ enroll                  72 B json      200          2.08 s            ▕▊ ▐││ URL               https://cdn.example.app/sdk/prefetch/     │
│ documents               93 B json      200          515 ms            ▕▏ ▐││                   fonts.json                                │
│ monitor                302 B json      200          1.50 s            ▕▋ ▐││ Request type      —                                         │
│ report                 305 B html      500          219 ms             ▏ ▐││ Response type     —                                         │
│ lookup?fields=cou…     101 B json      200          507 ms             ▕ ▐││ Response size     —                                         │
│ monitor                302 B json      200          1.49 s             ▕▌▐││ Initiating thread DefaultDispatcher-worker-2  id 59 ·       │
│ status?sessionId=…     263 B json      200          326 ms             ▕ ▐││                   call site                                 │
│ threshold                              ···          1.90 s              █▐││ Client            OkHttp 4.12.0                             │
│ events                  17 B json      200          970 ms              ▌▐││ Protocol          h2                                        │
│ status?sessionId=…     263 B json      200          174 ms              ▏ ││ Remote address    151.101.1.195:443  connection c-4 (reused)│
│ fonts.json                             canceled     380 ms              ▏ ││ TLS               TLSv1.3 · TLS_AES_128_GCM_SHA256          │
╰───────────────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
