host/crates/tui/tests/snapshots/snapshots__detail_html_500.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, |t| t.status() == Some(500), \"l\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active           26 requests · 13 KB in · 18 KB out
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.1 KB/s   ━ Sending 1.3 KB/s ─╮
│  16 KB/s                                                                             ┊                                                   │
│                                                                                      ┊                                                   │
│                                                                                      ┊            ┏━┓                                    │
│                                                                                      ┊            ┃ ┃                                    │
│ 8.0 KB/s                                                                             ┊            ┃ ┃                ┏━┓                 │
│                                                                                      ┊            ┃ ┗━┓  ┏┓      ┏━┓ ┃ ┃          ┏━┓    │
│                                                                                      ┊      ┏━┓━┓ ┃   ┗━┓┛┗━━┏━┓━┛ ┗━┓ ┏━━━━━━┓━━┓┃ ┃    │
│                                                                                      ━━┏━━━━┛ ┗━┗━┛ ┏━┛ ┗┓┏━━┛ ┗━━━┛ ┗━┛┓┏━━┓┏┗━━┗┛ ┗━┓━ │
│        0                                                                             ━━┛        ┗━━━┛    ┗┛             ┗┛  ┗┛    ┗━┛ ┗━ │
│                                                                                      00:00.000            00:05.000            00:10.000 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ───────────────────────────────╮╭─ report ─ Response body ─ Request body ─────────────────────╮
│ Name                    Size Type      Status         Time Timeline       ││ <!DOCTYPE html>                                             │
│ token                  391 B json      200          513 ms         █     ▐││ <html>                                                      │
│ init                   316 B json      200          2.01 s          ▏    ▐││   <head>                                                    │
│ monitor                302 B json      200          1.58 s          █    ▐││     <meta charset="utf-8">                                  │
│ events                  17 B json      200          1.45 s          █▏   ▐││     <title>500 Internal Server Error</title>                │
│ u_4821.png            4.5 KB png       200          476 ms          █    ▐││     <style>                                                 │
│ monitor                302 B json      200          1.53 s           ▊   ▐││       body{font-family:sans-serif;margin:2em}               │
│ challenge              144 B json      200          386 ms           ▏   ▐││     </style>                                                │
│ config                   0 B           302           61 ms           ▏   ▐│╰─────────────────────────────────────────────────────────────╯
│ ↪ config.json          106 B json      200          195 ms           ▏   ▐│╭─ Overview ─ Response ─ Request ─ Call Stack ────────────────╮
│ attest                 180 B json      200          2.75 s           ▐█  ▐││ HTTP/2 500 Internal Server Error                            │
│ metrics                  6 B protobuf  200          224 ms           ▕   ▐││                                                             │
│ monitor                302 B json      200          1.41 s            ▋  ▐││ Headers (4)                                                 │
│ events                  17 B json      200          1.14 s            ▌  ▐││ date: Tue, 29 Sep 2026 05:10:08 GMT                         │
│ liveness-model-v3…     150 B json      404          346 ms            ▏  ▐││ content-type: text/html; charset=utf-8                      │
│ enroll                  72 B json      200          2.08 s            ▕▊ ▐││ content-length: 305                                         │
│ documents               93 B json      200          515 ms            ▕▏ ▐││ server: envoy                                               │
│ monitor                302 B json      200          1.50 s            ▕▋ ▐││                                                             │
│ report                 305 B html      500          219 ms             ▏ ▐││ Body  HTML, 305 B  [parsed · p: source]                     │
│ lookup?fields=cou…     101 B json      200          507 ms             ▕ ▐││ <!DOCTYPE html>                                             │
│ monitor                302 B json      200          1.49 s             ▕▌▐││ <html>                                                      │
│ status?sessionId=…     263 B json      200          326 ms             ▕  ││   <head>                                                    │
│ threshold                              ···          1.90 s              █ ││     <meta charset="utf-8">                                  │
│ events                  17 B json      200          970 ms              ▌ ││     <title>500 Internal Server Error</title>                │
╰───────────────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
